--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -284,6 +284,7 @@ define U-Boot/generic-rk3568
     hinlink_opc-h68k \
     hinlink_opc-h69k \
     lyt_t68m \
+    nlnet_xiguapi-v3 \
     seewo_sv21
 endef
 
@@ -306,13 +307,6 @@ define U-Boot/nanopi-r5s-rk3568
   NAME:=NanoPi R5S
   BUILD_DEVICES:= \
     friendlyarm_nanopi-r5s
-endef
-
-define U-Boot/nlnet-xgp-rk3568
-  $(U-Boot/rk3568/Default)
-  NAME:=NLnet XGP Board
-  BUILD_DEVICES:= \
-    nlnet_xgp
 endef
 
 define U-Boot/photonicat-rk3568
@@ -439,7 +433,6 @@ UBOOT_TARGETS := \
   mmbox-anas3035-rk3568 \
   nanopi-r5c-rk3568 \
   nanopi-r5s-rk3568 \
-  nlnet-xgp-rk3568 \
   photonicat-rk3568 \
   radxa-e25-rk3568 \
   rock-3a-rk3568 \
