nss-crypto: add eip-firmware depends

--- a/package/qca/qca-nss-crypto/Makefile
+++ b/package/qca/qca-nss-crypto/Makefile
@@ -16,13 +16,17 @@ include $(INCLUDE_DIR)/package.mk
 
 # v1.0 is for Akronite
 # v2.0 is for Hawkeye/Cypress/Maple
+ifeq ($(BOARD),ipq806x)
+NSS_CRYPTO_DIR:=v1.0
+else
 NSS_CRYPTO_DIR:=v2.0
+endif
 
 define KernelPackage/qca-nss-crypto
 	SECTION:=kernel
 	CATEGORY:=Kernel modules
 	SUBMENU:=Cryptographic API modules
-	DEPENDS:=@TARGET_qualcommax +kmod-qca-nss-drv
+	DEPENDS:=@TARGET_qualcommax +kmod-qca-nss-drv +eip197-firmware
 	TITLE:=Kernel driver for NSS crypto driver
 	FILES:=$(PKG_BUILD_DIR)/$(NSS_CRYPTO_DIR)/src/qca-nss-crypto.ko \
 	$(PKG_BUILD_DIR)/$(NSS_CRYPTO_DIR)/tool/qca-nss-crypto-tool.ko
