--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -286,7 +286,8 @@ define U-Boot/generic-rk3568
     hinlink_opc-h69k \
     lyt_t68m \
     nlnet_xiguapi-v3 \
-    seewo_sv21
+    seewo_sv21 \
+	nsy_g68-plus
 endef
 
 define U-Boot/mmbox-anas3035-rk3568
