--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -18,11 +18,15 @@ jobs:
           sudo apt update
           sudo apt -y install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget
 
-      - name: 加载配置文件
+      - name: 加载配置文件（修复路径错误）
         run: |
-          # 加载newifi d2默认配置
-          cp configs/templates/newifi-d2.config .config
-          # 开启KVR协议、双频WiFi、easymesh插件（关键配置）
+          # 第一步：指定编译目标为newifi d2，生成基础配置（核心修复）
+          ./scripts/target-metadata.pl show target ramips/mt7621 > /dev/null
+          echo "CONFIG_TARGET_ramips=y" > .config
+          echo "CONFIG_TARGET_ramips_mt7621=y" >> .config
+          echo "CONFIG_TARGET_ramips_mt7621_DEVICE_newifi-d2=y" >> .config
+          
+          # 第二步：开启KVR协议、双频WiFi、easymesh插件（保留原有核心配置）
           cat >> .config << EOF
           # 开启802.11r/k/v（KVR协议）
           CONFIG_PACKAGE_hostapd-utils=y
@@ -44,11 +48,13 @@ jobs:
           CONFIG_PACKAGE_mt7603-firmware=y
           CONFIG_PACKAGE_mt7612-firmware=y
           
-          # 保留基础工具
+          # 保留基础工具和LuCI界面
           CONFIG_PACKAGE_luci=y
           CONFIG_PACKAGE_luci-theme-argon=y
+          CONFIG_PACKAGE_luci-ssl=y # 可选，增加LuCI HTTPS支持
           EOF
-          # 自动补全配置
+          
+          # 第三步：自动补全配置（关键，避免配置缺失）
           make defconfig
 
       - name: 下载源码和依赖
